--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2725,10 +2725,10 @@
         const cmdIds = (singleChannel ? commandId[i] : `${commandId[i]} & ${commandId[i + 1]}`).padStart(9, ".");
         // use 0.5x and 2x of initialXO as evaluation range
         const initialXO = customCrossover[i];
-        let bestXO = initialXO, maxSum = -Infinity;
+        let bestXO = initialXO, maxSPL = -Infinity;
         console.info("Starting...");
         for (let j = 0; j < freqIndex.length; j++) {
-          let checkXO = freqIndex[j];
+          const checkXO = freqIndex[j];
           // don't look at XO below speaker initialXO, above 2x initialXO or outside sub bandwidth
           if (checkXO < Math.max(initialXO, minXO) || checkXO > Math.min(initialXO * 2, maxXO)) { continue; }
           // final XO determination logic
@@ -2751,12 +2751,11 @@
           const mlpSWWithLPFIdx = Object.keys(mlpSWWithLPF.results)[0];
           const mlpXOResult = await postNext('Arithmetic', [mlpSPWithHPFIdx, mlpSWWithLPFIdx], { function: "A + B" }); // response using checkXO
           const mlpXOResultIdx = Object.keys(mlpXOResult.results)[0];
-          const checkXOResponse = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', mlpXOResultIdx);
-          const checkXOArray = response2array(checkXOResponse, startFreq, endFreq);
           // pick XO with highest output
-          const tempSum = checkXOArray.reduce((acc, val) => acc + val, 0);
-          if (tempSum > maxSum) {
-            maxSum = tempSum;
+          let checkXOAvgSPL = await getSPL(mlpXOResultIdx, startFreq, endFreq);
+          checkXOAvgSPL = Math.round(checkXOAvgSPL * 10) / 10; // round to nearest 0.1dB
+          if (maxSPL < checkXOAvgSPL) {
+            maxSPL = checkXOAvgSPL;
             bestXO = checkXO;
           }
           // delete in reverse order of creation
@@ -3097,7 +3096,7 @@
     }
     async function getSPL(idx, start, end) {
       // calculates average SPL between start and end frequencies
-      const freqResponse = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
+      const freqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', idx);
       const freqArray = response2array(freqResponse, start, end);
       const freqSPL = freqArray.reduce((acc, val) => acc + val, 0) / freqArray.length;
       return freqSPL; // average dB SPL
