--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.6.1</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.6.2</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -2595,12 +2595,12 @@
       for (let i = 1; i <= nSpeakers; i++) {
         mlpSPIndices.push(cmdIdMLPIndices[commandId[i]]);
       }
-      const avgInitialXO = customCrossover.slice(1).reduce((acc, val) => acc + val, 0) / nSpeakers;
+      const alignXO = (minXO + maxXO) / 2; // high enough to reduce effects of GD and help with midbass
       const avgSpeaker = await postNext('Magn plus phase average', Array.from(mlpSPIndices));
       const avgSpeakerIdx = Object.keys(avgSpeaker.results)[0]
-      const avgSpeakerWithHPF = await genSpeaker(avgSpeakerIdx, avgInitialXO);
+      const avgSpeakerWithHPF = await genSpeaker(avgSpeakerIdx, alignXO);
       const avgSpeakerWithHPFIdx = Object.keys(avgSpeakerWithHPF.results)[0];
-      const subwooferWithLPF = await genSub(cmdIdMLPIndices[commandId[nChannels]], avgInitialXO);
+      const subwooferWithLPF = await genSub(cmdIdMLPIndices[commandId[nChannels]], alignXO);
       const subwooferWithLPFIdx = Object.keys(subwooferWithLPF.results)[0];
       // use 0.5x and 2x of min/max XO to set evaluation range
       const startFreq = Math.round(minXO / 2);
@@ -2618,7 +2618,7 @@
       const [requiredDelay, isInverted] = await align4system(avgSpeakerWithHPFIdx, subwooferWithLPFIdx,
                                                              startFreq, endFreq,
                                                              loDelayLimit, hiDelayLimit,
-                                                             avgInitialXO);
+                                                             alignXO);
       // cleanup in reverse order of creation
       await postDelete(subwooferWithLPFIdx);
       await postDelete(avgSpeakerWithHPFIdx);
